Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
     <title>Butcher Shop</title>
     <meta name="description" content="Premium quality meats delivered to your door" />
     
-    <!-- App Icons (you'll need to add these) -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png" />
+    <!-- App Icons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/photos/1.png" />
+    <link rel="icon" type="image/png" href="/photos/1.png" />
   </head>
 
   <body>
