fix: update icon paths to correct locations in index.html

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <meta name="description" content="Premium quality meats delivered to your door" />
     
     <!-- App Icons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/photos/1.png" />
-    <link rel="icon" type="image/png" href="/photos/1.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/1.png" />
+    <link rel="icon" type="image/png" href="/1.png" />
   </head>
 
   <body>
