--- a/index.html
+++ b/index.html
@@ -16,13 +16,12 @@
     <link rel="manifest" href="/manifest.json" />
     
     <!-- App Icons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/icons/icon-192x192.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/icons/icon-72x72.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/icons/icon-72x72.png" />
+    <link rel="apple-touch-icon" sizes="192x192" href="/icons/icon-192x192.svg" />
+    <link rel="icon" type="image/svg+xml" href="/icons/icon-128x128.svg" />
     <link rel="icon" type="image/png" href="/1.png" />
     
     <!-- iOS Splash Screens -->
-    <link rel="apple-touch-startup-image" href="/icons/icon-512x512.png" />
+    <link rel="apple-touch-startup-image" href="/icons/icon-512x512.svg" />
   </head>
 
   <body>
